feat(home): refine hero styling

--- a/pages/index.html
+++ b/pages/index.html
@@ -44,11 +44,15 @@
 		<main class="home">
 			<section class="home-hero" aria-label="Introduction">
 				<div class="home-shell">
-					<h1 class="home-hero__title">Celebrating India’s Living Heritage</h1>
-					<p class="home-hero__subtitle text-muted">
-						Programs, schemes, and initiatives that preserve culture and promote creative traditions.
-					</p>
-					<a class="btn btn--primary" href="schemes.html">Explore Schemes</a>
+					<div class="home-hero__inner">
+						<h1 class="home-hero__title">Celebrating India’s Living Heritage</h1>
+						<p class="home-hero__subtitle">
+							Programs, schemes, and initiatives that preserve culture and promote creative traditions.
+						</p>
+						<div class="home-hero__actions">
+							<a class="btn btn--primary" href="schemes.html">Explore Schemes</a>
+						</div>
+					</div>
 				</div>
 			</section>
 
