feat(home): refine section rhythm and banding

--- a/pages/index.html
+++ b/pages/index.html
@@ -56,7 +56,7 @@
 				</div>
 			</section>
 
-			<section class="home-section" aria-label="About">
+			<section class="home-section home-section--plain" aria-label="About">
 				<div class="home-shell home-split">
 					<div class="card">
 						<div class="card__header">
@@ -73,7 +73,7 @@
 				</div>
 			</section>
 
-			<section class="home-section" aria-label="Cultural highlights">
+			<section class="home-section home-section--tint" aria-label="Cultural highlights">
 				<div class="home-shell">
 					<h2 class="home-section__title">Cultural Highlights</h2>
 					<div class="home-grid">
@@ -97,7 +97,7 @@
 				</div>
 			</section>
 
-			<section class="home-section" aria-label="Events">
+			<section class="home-section home-section--plain" aria-label="Events">
 				<div class="home-shell">
 					<div class="home-section__head">
 						<h2 class="home-section__title">Events</h2>
@@ -126,7 +126,7 @@
 				</div>
 			</section>
 
-			<section class="home-section" aria-label="Gallery preview">
+			<section class="home-section home-section--tint" aria-label="Gallery preview">
 				<div class="home-shell">
 					<div class="home-section__head">
 						<h2 class="home-section__title">Gallery</h2>
