feat(home): add official footer

--- a/pages/index.html
+++ b/pages/index.html
@@ -142,6 +142,29 @@
 			</section>
 		</main>
 
+		<footer class="site-footer" aria-label="Site footer">
+			<div class="home-shell site-footer__inner">
+				<div class="site-footer__brand">
+					<strong class="site-footer__title">Ministry of Culture, Government of India</strong>
+					<p class="site-footer__desc text-muted">Official information and public resources for citizens and institutions.</p>
+				</div>
+
+				<nav class="site-footer__nav" aria-label="Footer">
+					<ul class="site-footer__links">
+						<li><a class="site-footer__link" href="about.html">About</a></li>
+						<li><a class="site-footer__link" href="culture.html">Culture</a></li>
+						<li><a class="site-footer__link" href="schemes.html">Schemes</a></li>
+						<li><a class="site-footer__link" href="events.html">Events</a></li>
+						<li><a class="site-footer__link" href="contact.html">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
+
+			<div class="home-shell site-footer__bottom">
+				<p class="text-small text-muted">© 2026 Ministry of Culture, Government of India</p>
+			</div>
+		</footer>
+
 		<script src="../scripts/app.js" defer></script>
 	</body>
 </html>
