feat(about): add content and styles

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="../styles/design-system/variables.css" />
 		<link rel="stylesheet" href="../styles/design-system/components.css" />
 		<link rel="stylesheet" href="../styles/globals.css" />
+		<link rel="stylesheet" href="../styles/pages/about.css" />
 	</head>
 	<body>
 		<!-- Canonical global navbar structure (to be reused across pages) -->
@@ -39,8 +40,69 @@
 			</div>
 		</nav>
 
-		<main>
-			<h1>About</h1>
+		<main class="about">
+			<div class="about-shell">
+				<header class="about-header">
+					<h1>About the Ministry of Culture</h1>
+				</header>
+
+				<section class="about-section" aria-label="Introduction">
+					<h2>Introduction</h2>
+					<p>
+						The Ministry of Culture, Government of India, works to preserve, protect, and promote the nation’s
+						heritage and cultural expressions. It supports institutions and initiatives that keep traditional
+						knowledge, arts, and history accessible to citizens.
+					</p>
+					<p>
+						Through policies, partnerships, and public programs, the ministry strengthens cultural infrastructure
+						and encourages participation in arts and heritage across regions.
+					</p>
+				</section>
+
+				<section class="about-section" aria-label="Key responsibilities">
+					<h2>Key Responsibilities</h2>
+					<ul class="about-list">
+						<li>Conservation and restoration of monuments and heritage sites.</li>
+						<li>Support for museums, archives, libraries, and cultural institutions.</li>
+						<li>Promotion of performing arts, folk traditions, crafts, and literature.</li>
+						<li>Implementation of cultural schemes, grants, and fellowships.</li>
+						<li>Documentation and safeguarding of intangible cultural heritage.</li>
+					</ul>
+				</section>
+
+				<section class="about-section" aria-label="Vision and mission">
+					<h2>Vision &amp; Mission</h2>
+					<div class="about-grid">
+						<div class="card">
+							<div class="card__header"><h3>Vision</h3></div>
+							<div class="card__content">
+								<p class="about-muted">
+									A culturally confident India where heritage is preserved and the arts are valued, accessible, and
+									participatory.
+								</p>
+							</div>
+						</div>
+						<div class="card">
+							<div class="card__header"><h3>Mission</h3></div>
+							<div class="card__content">
+								<p class="about-muted">
+									To strengthen cultural institutions, support artists and communities, and create programs that
+									protect heritage and encourage learning, research, and cultural exchange.
+								</p>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<section class="about-section" aria-label="Organizational overview">
+					<h2>Organizational Overview</h2>
+					<p>
+						The ministry coordinates with cultural bodies, institutions, and partner organizations to deliver
+						schemes and services. Its work spans heritage conservation, cultural education, and support for
+						creative communities, ensuring programs are implemented consistently and responsibly.
+					</p>
+				</section>
+			</div>
 		</main>
 
 		<script src="../scripts/app.js" defer></script>
