chore(a11y): consistency pass (links + page spacing)'

--- a/pages/index.html
+++ b/pages/index.html
@@ -67,7 +67,7 @@
 								The Ministry of Culture works to safeguard India’s tangible and intangible heritage, support
 								cultural institutions, and enable access to arts and knowledge across the country.
 							</p>
-							<a class="home-link" href="about.html">Read more</a>
+							<a class="home-link" href="about.html">Read more about the Ministry</a>
 						</div>
 					</div>
 				</div>
@@ -101,7 +101,7 @@
 				<div class="home-shell">
 					<div class="home-section__head">
 						<h2 class="home-section__title">Events</h2>
-						<a class="home-link" href="events.html">View all</a>
+						<a class="home-link" href="events.html">View all events</a>
 					</div>
 					<ul class="home-list">
 						<li class="home-list__item card">
@@ -130,7 +130,7 @@
 				<div class="home-shell">
 					<div class="home-section__head">
 						<h2 class="home-section__title">Gallery</h2>
-						<a class="home-link" href="gallery.html">Open gallery</a>
+						<a class="home-link" href="gallery.html">Open the gallery</a>
 					</div>
 					<div class="home-gallery">
 						<div class="home-gallery__tile" role="img" aria-label="Gallery image placeholder"></div>
