--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="../styles/design-system/variables.css" />
 		<link rel="stylesheet" href="../styles/design-system/components.css" />
 		<link rel="stylesheet" href="../styles/globals.css" />
+		<link rel="stylesheet" href="../styles/pages/contact.css" />
 	</head>
 	<body>
 		<!-- Canonical global navbar structure (to be reused across pages) -->
@@ -39,7 +40,7 @@
 			</div>
 		</nav>
 
-		<main>
+		<main class="contact">
 			<h1>Contact</h1>
 		</main>
 
