--- a/pages/schemes.html
+++ b/pages/schemes.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../styles/design-system/variables.css" />
     <link rel="stylesheet" href="../styles/design-system/components.css" />
     <link rel="stylesheet" href="../styles/globals.css" />
+    <link rel="stylesheet" href="../styles/pages/schemes.css" />
   </head>
   <body>
     <!-- Canonical global navbar structure (to be reused across pages) -->
@@ -39,7 +40,7 @@
       </div>
     </nav>
 
-    <main>
+    <main class="schemes">
       <h1>Schemes</h1>
     </main>
 
