--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,7 +41,95 @@
 		</nav>
 
 		<main class="contact">
-			<h1>Contact</h1>
+			<div class="contact-shell">
+				<header class="contact-header">
+					<h1>Contact Us</h1>
+					<p class="contact-intro text-muted">
+						For official communication, please use the contact details below or submit a message through the form.
+					</p>
+				</header>
+
+				<div class="contact-grid">
+					<section aria-label="Contact information">
+						<div class="card">
+							<div class="card__header">
+								<h2 class="contact-card__title">Contact Information</h2>
+							</div>
+							<div class="card__content">
+								<p class="contact-ministry"><strong>Ministry of Culture, Government of India</strong></p>
+								<address class="contact-address">
+									Shastri Bhawan, Dr. Rajendra Prasad Road<br />
+									New Delhi, 110001, India
+								</address>
+
+								<dl class="contact-meta">
+									<div>
+										<dt>Email</dt>
+										<dd><a class="contact-link" href="mailto:contact@culture.gov.in">contact@culture.gov.in</a></dd>
+									</div>
+									<div>
+										<dt>Phone</dt>
+										<dd><a class="contact-link" href="tel:+911123000000">+91 11 2300 0000</a></dd>
+									</div>
+									<div>
+										<dt>Office Hours</dt>
+										<dd>Monday–Friday, 10:00 AM to 5:30 PM</dd>
+									</div>
+								</dl>
+							</div>
+						</div>
+					</section>
+
+					<section aria-label="Send a message">
+						<form class="card contact-form" action="#" method="post">
+							<div class="card__header">
+								<h2 class="contact-card__title">Send a Message</h2>
+							</div>
+							<div class="card__content">
+								<div class="contact-form__grid">
+									<div class="contact-field">
+										<label class="contact-label" for="contact-name">Name</label>
+										<input class="contact-input" id="contact-name" name="name" type="text" autocomplete="name" required />
+									</div>
+
+									<div class="contact-field">
+										<label class="contact-label" for="contact-email">Email</label>
+										<input
+											class="contact-input"
+											id="contact-email"
+											name="email"
+											type="email"
+											autocomplete="email"
+											required
+										/>
+									</div>
+
+									<div class="contact-field contact-field--full">
+										<label class="contact-label" for="contact-subject">Subject</label>
+										<input class="contact-input" id="contact-subject" name="subject" type="text" required />
+									</div>
+
+									<div class="contact-field contact-field--full">
+										<label class="contact-label" for="contact-message">Message</label>
+										<textarea
+											class="contact-textarea"
+											id="contact-message"
+											name="message"
+											rows="6"
+											autocomplete="off"
+											required
+										></textarea>
+									</div>
+								</div>
+
+								<div class="contact-form__actions">
+									<button class="btn btn--primary" type="submit">Submit</button>
+								</div>
+							</div>
+						</form>
+					</section>
+				</div>
+			</div>
 		</main>
 
 		<script src="../scripts/app.js" defer></script>
