refactor(routing): migrate pages to folder-based index routes

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<title>Ministry of Culture, Govt. of India</title>
 
 		<!-- Design system (tokens + shared components) -->
-		<link rel="stylesheet" href="../styles/design-system/variables.css" />
-		<link rel="stylesheet" href="../styles/design-system/components.css" />
-		<link rel="stylesheet" href="../styles/globals.css" />
-		<link rel="stylesheet" href="../styles/pages/home.css" />
+		<link rel="stylesheet" href="styles/design-system/variables.css" />
+		<link rel="stylesheet" href="styles/design-system/components.css" />
+		<link rel="stylesheet" href="styles/globals.css" />
+		<link rel="stylesheet" href="styles/pages/home.css" />
 	</head>
 	<body>
 		<!-- Canonical global navbar structure (to be reused across pages) -->
 		<nav class="site-nav" aria-label="Primary">
 			<div class="site-nav__inner">
-				<a class="site-nav__brand" href="index.html">Ministry of Culture, Govt. of India</a>
+				<a class="site-nav__brand" href="/">Ministry of Culture, Govt. of India</a>
 
 				<button
 					class="site-nav__toggle"
@@ -29,13 +29,13 @@
 
 				<div class="site-nav__menu" id="primary-navigation">
 					<ul class="site-nav__list">
-						<li class="site-nav__item"><a class="site-nav__link" href="index.html">Home</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="about.html">About</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="culture.html">Culture</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="schemes.html">Schemes</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="events.html">Events</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="gallery.html">Gallery</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="contact.html">Contact</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/">Home</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/about">About</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/culture">Culture</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/schemes">Schemes</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/events">Events</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/gallery">Gallery</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/contact">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -50,7 +50,7 @@
 							Programs, schemes, and initiatives that preserve culture and promote creative traditions.
 						</p>
 						<div class="home-hero__actions">
-							<a class="btn btn--primary" href="schemes.html">Explore Schemes</a>
+							<a class="btn btn--primary" href="/schemes">Explore Schemes</a>
 						</div>
 					</div>
 				</div>
@@ -67,7 +67,7 @@
 								The Ministry of Culture works to safeguard India’s tangible and intangible heritage, support
 								cultural institutions, and enable access to arts and knowledge across the country.
 							</p>
-							<a class="home-link" href="about.html">Read more about the Ministry</a>
+							<a class="home-link" href="/about">Read more about the Ministry</a>
 						</div>
 					</div>
 				</div>
@@ -101,7 +101,7 @@
 				<div class="home-shell">
 					<div class="home-section__head">
 						<h2 class="home-section__title">Events</h2>
-						<a class="home-link" href="events.html">View all events</a>
+						<a class="home-link" href="/events">View all events</a>
 					</div>
 					<ul class="home-list">
 						<li class="home-list__item card">
@@ -130,7 +130,7 @@
 				<div class="home-shell">
 					<div class="home-section__head">
 						<h2 class="home-section__title">Gallery</h2>
-						<a class="home-link" href="gallery.html">Open the gallery</a>
+						<a class="home-link" href="/gallery">Open the gallery</a>
 					</div>
 					<div class="home-gallery">
 						<div class="home-gallery__tile" role="img" aria-label="Gallery image placeholder"></div>
@@ -151,11 +151,11 @@
 
 				<nav class="site-footer__nav" aria-label="Footer">
 					<ul class="site-footer__links">
-						<li><a class="site-footer__link" href="about.html">About</a></li>
-						<li><a class="site-footer__link" href="culture.html">Culture</a></li>
-						<li><a class="site-footer__link" href="schemes.html">Schemes</a></li>
-						<li><a class="site-footer__link" href="events.html">Events</a></li>
-						<li><a class="site-footer__link" href="contact.html">Contact</a></li>
+						<li><a class="site-footer__link" href="/about">About</a></li>
+						<li><a class="site-footer__link" href="/culture">Culture</a></li>
+						<li><a class="site-footer__link" href="/schemes">Schemes</a></li>
+						<li><a class="site-footer__link" href="/events">Events</a></li>
+						<li><a class="site-footer__link" href="/contact">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -165,6 +165,6 @@
 			</div>
 		</footer>
 
-		<script src="../scripts/app.js" defer></script>
+		<script src="scripts/app.js" defer></script>
 	</body>
 </html>
