--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 		<!-- Canonical global navbar structure (to be reused across pages) -->
 		<nav class="site-nav" aria-label="Primary">
 			<div class="site-nav__inner">
-				<a class="site-nav__brand" href="index.html">Ministry of Culture, Govt. of India</a>
+				<a class="site-nav__brand" href="/">Ministry of Culture, Govt. of India</a>
 
 				<button
 					class="site-nav__toggle"
@@ -28,13 +28,13 @@
 
 				<div class="site-nav__menu" id="primary-navigation">
 					<ul class="site-nav__list">
-						<li class="site-nav__item"><a class="site-nav__link" href="index.html">Home</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="about.html">About</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="culture.html">Culture</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="schemes.html">Schemes</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="events.html">Events</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="gallery.html">Gallery</a></li>
-						<li class="site-nav__item"><a class="site-nav__link" href="contact.html">Contact</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/">Home</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/about">About</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/culture">Culture</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/schemes">Schemes</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/events">Events</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/gallery">Gallery</a></li>
+						<li class="site-nav__item"><a class="site-nav__link" href="/contact">Contact</a></li>
 					</ul>
 				</div>
 			</div>
