refactor(events): switch listing to responsive grid

--- a/events/index.html
+++ b/events/index.html
@@ -53,8 +53,17 @@
         <section class="events-section" aria-label="Upcoming events">
           <div class="events-list">
             <article class="card events-item" aria-label="National Heritage Week">
-              <div class="card__header">
-                <h2 class="events-title">National Heritage Week</h2>
+              <div class="card__header events-item__header">
+                <div class="events-item__head">
+                  <img
+                    class="events-thumb"
+                    src="../assets/images/events/heritage-week.jpg"
+                    alt="National Heritage Week"
+                    loading="lazy"
+                    decoding="async"
+                  />
+                  <h2 class="events-title">National Heritage Week</h2>
+                </div>
               </div>
               <div class="card__content">
                 <dl class="events-meta">
@@ -66,8 +75,17 @@
             </article>
 
             <article class="card events-item" aria-label="Folk Arts Showcase">
-              <div class="card__header">
-                <h2 class="events-title">Folk Arts Showcase</h2>
+              <div class="card__header events-item__header">
+                <div class="events-item__head">
+                  <img
+                    class="events-thumb"
+                    src="../assets/images/events/folk-arts.jpg"
+                    alt="Folk Arts Showcase"
+                    loading="lazy"
+                    decoding="async"
+                  />
+                  <h2 class="events-title">Folk Arts Showcase</h2>
+                </div>
               </div>
               <div class="card__content">
                 <dl class="events-meta">
@@ -79,8 +97,17 @@
             </article>
 
             <article class="card events-item" aria-label="Crafts and Handloom Fair">
-              <div class="card__header">
-                <h2 class="events-title">Crafts and Handloom Fair</h2>
+              <div class="card__header events-item__header">
+                <div class="events-item__head">
+                  <img
+                    class="events-thumb"
+                    src="../assets/images/events/handicrafts.jpg"
+                    alt="Crafts and Handloom Fair"
+                    loading="lazy"
+                    decoding="async"
+                  />
+                  <h2 class="events-title">Crafts and Handloom Fair</h2>
+                </div>
               </div>
               <div class="card__content">
                 <dl class="events-meta">
@@ -92,8 +119,17 @@
             </article>
 
             <article class="card events-item" aria-label="Classical Music Evening">
-              <div class="card__header">
-                <h2 class="events-title">Classical Music Evening</h2>
+              <div class="card__header events-item__header">
+                <div class="events-item__head">
+                  <img
+                    class="events-thumb"
+                    src="../assets/images/events/classical-music.jpg"
+                    alt="Classical Music Evening"
+                    loading="lazy"
+                    decoding="async"
+                  />
+                  <h2 class="events-title">Classical Music Evening</h2>
+                </div>
               </div>
               <div class="card__content">
                 <dl class="events-meta">
@@ -105,8 +141,17 @@
             </article>
 
             <article class="card events-item" aria-label="Museum Education Day">
-              <div class="card__header">
-                <h2 class="events-title">Museum Education Day</h2>
+              <div class="card__header events-item__header">
+                <div class="events-item__head">
+                  <img
+                    class="events-thumb"
+                    src="../assets/images/events/museum-education.jpg"
+                    alt="Museum Education Day"
+                    loading="lazy"
+                    decoding="async"
+                  />
+                  <h2 class="events-title">Museum Education Day</h2>
+                </div>
               </div>
               <div class="card__content">
                 <dl class="events-meta">
