feat(view-transitions): shared element for heritage week

--- a/events/index.html
+++ b/events/index.html
@@ -52,9 +52,9 @@
 
         <section class="events-section" aria-label="Upcoming events">
           <div class="events-list">
-            <article class="card events-item" aria-label="National Heritage Week">
+            <article class="card events-item events-item--heritage-week" aria-label="National Heritage Week">
               <div class="card__header events-item__header">
-                <div class="events-item__head">
+                <a class="events-item__head" href="/events/national-heritage-week/">
                   <img
                     class="events-thumb"
                     src="../assets/images/events/heritage-week.jpg"
@@ -63,7 +63,7 @@
                     decoding="async"
                   />
                   <h2 class="events-title">National Heritage Week</h2>
-                </div>
+                </a>
               </div>
               <div class="card__content">
                 <dl class="events-meta">
