--- a/events/national-heritage-week/index.html
+++ b/events/national-heritage-week/index.html
@@ -50,8 +50,9 @@
 								alt="National Heritage Week"
 								loading="lazy"
 								decoding="async"
+
 							/>
-							<h1 class="event-hero__title">National Heritage Week</h1>
+							<h1 class="event-hero__title"  >National Heritage Week</h1>
 						</div>
 					</div>
 
@@ -94,6 +95,6 @@
 			</div>
 		</main>
 
-		<script src="../../scripts/app.js" defer></script>
+		<!-- <script src="../../scripts/app.js" defer></script> -->
 	</body>
 </html>
